--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.2
 Django==5.2.3
 idna==3.10
 pillow==11.2.1
+psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 requests==2.32.4
 sqlparse==0.5.3
